force-app/main/default/objects/Lead/fields/Accelerate_Modules__c.field-meta.xml
<CustomField>
    <fullName>Accelerate_Modules__c</fullName>
    <inlineHelpText>This field is used in the Website - Plans - Request a Quote Form.</inlineHelpText>
    <label>Accelerate Modules</label>
    <length>255</length>
    <type>Text</type>
</CustomField>