force-app/main/default/objects/Lead/fields/Access_Blocked__c.field-meta.xml
<CustomField>
    <fullName>Access_Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Access Blocked</label>
    <type>Checkbox</type>
</CustomField>