force-app/main/default/objects/Lead/fields/Access_Blocked_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Access_Blocked_Time_Stamp__c</fullName>
    <label>Access Blocked Time Stamp</label>
    <type>DateTime</type>
</CustomField>