force-app/main/default/objects/Lead/fields/Add_to_Welcome_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Welcome_Email_2__c</fullName>
    <label>Add to Welcome Email 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>salesforce</fullName>
            </value>
            <value>
                <fullName>general</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>