force-app/main/default/objects/Lead/fields/Add_to_Welcome_Email__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Welcome_Email__c</fullName>
    <inlineHelpText>Whether to add this user to the welcome email. &quot;general&quot; will send a generic email, &quot;salesforce&quot; will send a salesforce focused email.</inlineHelpText>
    <label>Add to Welcome Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>no</fullName>
            </value>
            <value>
                <fullName>salesforce</fullName>
            </value>
            <value>
                <fullName>general</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>