force-app/main/default/objects/Lead/fields/algnlta__Lock_Lead__c.field-meta.xml
<CustomField>
    <fullName>algnlta__Lock_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, lead will be &quot;locked&quot; which prevents the lead from being matched to an account and auto-converting.</description>
    <inlineHelpText>If checked, lead will be &quot;locked&quot; which prevents the lead from being matched to an account and auto-converting.</inlineHelpText>
    <label>Lock Lead</label>
    <type>Checkbox</type>
</CustomField>