force-app/main/default/objects/Lead/fields/algnlta__Matched_Account__c.field-meta.xml
<CustomField>
    <fullName>algnlta__Matched_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to account used in Align.ly Lead-to-Account Matching.</description>
    <inlineHelpText>The account matched to the lead. Updated by Align.ly and/or manually.</inlineHelpText>
    <label>Matched Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Matched Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>