force-app/main/default/objects/Lead/fields/AutoRABIT_Foundation__c.field-meta.xml
<CustomField>
    <fullName>AutoRABIT_Foundation__c</fullName>
    <inlineHelpText>This field is used in the Website - Plans - Request a Quote Form.</inlineHelpText>
    <label>AutoRABIT Foundation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AutoRABIT_Foundation</valueSetName>
    </valueSet>
</CustomField>