force-app/main/default/objects/Lead/fields/Awareness__c.field-meta.xml
<CustomField>
    <fullName>Awareness__c</fullName>
    <formula>IF( OR( TEXT(Status) = &quot;1-Lead&quot;,TEXT(Status)= &quot;2-Subscriber&quot;), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Awareness</label>
    <type>Checkbox</type>
</CustomField>