force-app/main/default/objects/Lead/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Dev Ops Consulting</fullName>
                <label>DevOps Consulting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>