force-app/main/default/objects/Lead/fields/Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Call_Disposition__c</fullName>
    <inlineHelpText>Call Result from Orum.</inlineHelpText>
    <label>Call Disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>