force-app/main/default/objects/Lead/fields/Company_URL__c.field-meta.xml
<CustomField>
    <fullName>Company_URL__c</fullName>
    <description>Field to add company&apos;s website.</description>
    <label>Company URL</label>
    <type>Url</type>
</CustomField>