force-app/main/default/objects/Lead/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <inlineHelpText>Select the competitor</inlineHelpText>
    <label>Competitor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Copado</fullName>
            </value>
            <value>
                <fullName>Flosum</fullName>
            </value>
            <value>
                <fullName>Gearset</fullName>
            </value>
            <value>
                <fullName>Atlassian - Bamboo</fullName>
                <label>Bamboo</label>
            </value>
            <value>
                <fullName>Dream factory – Snapshot</fullName>
                <label>Snapshot</label>
            </value>
            <value>
                <fullName>Jitterbit</fullName>
            </value>
            <value>
                <fullName>Odaseva</fullName>
            </value>
            <value>
                <fullName>AssureClick</fullName>
            </value>
            <value>
                <fullName>Provar</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Jenkins</fullName>
            </value>
            <value>
                <fullName>Homegrown</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>