force-app/main/default/objects/Lead/fields/Consideration__c.field-meta.xml
<CustomField>
    <fullName>Consideration__c</fullName>
    <formula>IF(OR( TEXT(Status) = &quot;1-Lead&quot;, TEXT(Status) = &quot;2-Subscriber&quot;, TEXT(Status) = &quot;Attempted&quot;), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consideration</label>
    <type>Checkbox</type>
</CustomField>