force-app/main/default/objects/Lead/fields/Current_Sequence_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_Name__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <inlineHelpText>Field mapped to Outreach.io Currently Active Sequence Name.</inlineHelpText>
    <label>Current Sequence Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>