force-app/main/default/objects/Lead/fields/Current_Sequence_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_Status__c</fullName>
    <inlineHelpText>Field mapped to Outreach.io Currently Active Sequence Status.</inlineHelpText>
    <label>Current Sequence Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>