force-app/main/default/objects/Lead/fields/Customer_Group_For_Lead__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group_For_Lead__c</fullName>
    <formula>MID (  Email  ,
FIND( &quot;@&quot;,  Email ) + 1 ,
FIND ( &quot;.&quot;,  Email , FIND( &quot;@&quot;,  Email ) ) - 1 - FIND( &quot;@&quot;,  Email )
)</formula>
    <label>Customer Group (For Lead)</label>
    <type>Text</type>
</CustomField>