force-app/main/default/objects/Lead/fields/Days_in_1_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Days_in_1_Lead_Status__c</fullName>
    <description>Created for Reporting Purpose.</description>
    <formula>IF(TEXT( Status) = &quot;1-Lead&quot;, Now() - X1_Lead_Status_In__c, X1_Lead_Status_Out__c - X1_Lead_Status_In__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days lead in 1-Lead status.</inlineHelpText>
    <label>Days in 1-Lead Status</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>