force-app/main/default/objects/Lead/fields/Days_in_2_Subscriber_Status__c.field-meta.xml
<CustomField>
    <fullName>Days_in_2_Subscriber_Status__c</fullName>
    <description>Created for Reporting Purpose.</description>
    <formula>IF(TEXT( Status) = &quot;2-Subscriber&quot;, Now() - X2_Subscriber_Status_In__c, X2_Subscriber_Status_Out__c - X2_Subscriber_Status_In__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days lead in 2-Subscriber status.</inlineHelpText>
    <label>Days in 2-Subscriber Status</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>