force-app/main/default/objects/Lead/fields/Days_in_6_Intro_Call_Held__c.field-meta.xml
<CustomField>
    <fullName>Days_in_6_Intro_Call_Held__c</fullName>
    <description>Created for Reporting Purpose.</description>
    <formula>IF(TEXT( Status) = &quot;5-Intro Call Held&quot;, Now() - X6_Intro_Call_Held_Status_In__c, X6_Intro_Call_Held_Status_Out__c - X6_Intro_Call_Held_Status_In__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days lead in 5-Intro Call Held status.</inlineHelpText>
    <label>Days in 6-Intro Call Held</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>