force-app/main/default/objects/Lead/fields/Days_since_Create__c.field-meta.xml
<CustomField>
    <fullName>Days_since_Create__c</fullName>
    <formula>TODAY() - datevalue(CreatedDate)</formula>
    <inlineHelpText>Days since the Lead has been created</inlineHelpText>
    <label>Days since Create</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>