force-app/main/default/objects/Lead/fields/DC_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>DC_Completed_Date__c</fullName>
    <description>Field used to specify the date a Discovery call was completed for CI/CD Lead.</description>
    <label>DC Completed Date (CI/CD)</label>
    <type>Date</type>
</CustomField>