force-app/main/default/objects/Lead/fields/DC_Scheduled_For__c.field-meta.xml
<CustomField>
    <fullName>DC_Scheduled_For__c</fullName>
    <description>The date the call will take place (as this may change as customer reschedules) for CI/CD Lead.</description>
    <inlineHelpText>The date the call will take place (as this may change as customer reschedules) for CI/CD Lead.</inlineHelpText>
    <label>DC Scheduled For (CI/CD)</label>
    <type>Date</type>
</CustomField>