force-app/main/default/objects/Lead/fields/DC_Scheduled_For_Vault__c.field-meta.xml
<CustomField>
    <fullName>DC_Scheduled_For_Vault__c</fullName>
    <label>DC Scheduled For (Vault)</label>
    <type>Date</type>
</CustomField>