force-app/main/default/objects/Lead/fields/DC_Scheduled_On__c.field-meta.xml
<CustomField>
    <fullName>DC_Scheduled_On__c</fullName>
    <description>Field used to specify the date when DC is scheduled for CI/CD Lead.</description>
    <label>DC Scheduled On (CI/CD)</label>
    <type>Date</type>
</CustomField>