force-app/main/default/objects/Lead/fields/Demo_Performed_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Performed_Date__c</fullName>
    <description>Field used to specify the date a demo was performed for CI/CD Lead.</description>
    <label>Demo Performed Date (CI/CD)</label>
    <type>Date</type>
</CustomField>