force-app/main/default/objects/Lead/fields/Demo_Performed_Date_VaultI0__c.field-meta.xml
<CustomField>
    <fullName>Demo_Performed_Date_VaultI0__c</fullName>
    <label>Demo Performed Date (Vault)</label>
    <type>Date</type>
</CustomField>