force-app/main/default/objects/Lead/fields/Demo_Scheduled_Date1_del__c.field-meta.xml
<CustomField>
    <fullName>Demo_Scheduled_Date1_del__c</fullName>
    <formula>DATEVALUE( Demo_Scheduled_Date__c )</formula>
    <label>Demo Scheduled Date</label>
    <type>Date</type>
</CustomField>