force-app/main/default/objects/Lead/fields/Demo_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Scheduled_Date__c</fullName>
    <description>Field used to specify the date when Demo is scheduled</description>
    <label>Demo Scheduled Date (CI/CD)</label>
    <type>Date</type>
</CustomField>