force-app/main/default/objects/Lead/fields/Demo_Scheduled_Date_Vault__c.field-meta.xml
<CustomField>
    <fullName>Demo_Scheduled_Date_Vault__c</fullName>
    <label>Demo Scheduled Date (Vault)</label>
    <type>Date</type>
</CustomField>