force-app/main/default/objects/Lead/fields/Early_Stage__c.field-meta.xml
<CustomField>
    <fullName>Early_Stage__c</fullName>
    <formula>IF(OR( TEXT(Status) = &quot;Requested Demo via Web&quot;, TEXT(Status) = &quot;5-Intro Call Scheduled&quot;, TEXT(Status) = &quot;6-Intro Call Held&quot;, TEXT(Status) = &quot;7-Discovery Call Scheduled&quot;, TEXT(Status) = &quot;8-Discovery Call Held&quot;, TEXT(Status) = &quot;9-SAL&quot; ), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Early Stage</label>
    <type>Checkbox</type>
</CustomField>