force-app/main/default/objects/Lead/fields/Early_Stage_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Early_Stage_Pipeline__c</fullName>
    <formula>IF( OR( ISPICKVAL(Status, &quot;5-Intro Call Scheduled&quot;), ISPICKVAL(Status, &quot;6-Intro Call Held&quot;), ISPICKVAL(Status, &quot;7-Discovery Call Scheduled&quot;),  ISPICKVAL(Status, &quot;8-Discovery Call Held&quot;), ISPICKVAL(Status, &quot;9-SAL&quot;)), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Early Stage Pipeline</label>
    <type>Checkbox</type>
</CustomField>