force-app/main/default/objects/Lead/fields/Eco_System__c.field-meta.xml
<CustomField>
    <fullName>Eco_System__c</fullName>
    <description>Please indicate the lead ecosystem</description>
    <inlineHelpText>Please indicate the lead ecosystem</inlineHelpText>
    <label>Eco System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Mulesoft</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Neither</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>