force-app/main/default/objects/Lead/fields/Estimated_Code_Blocks__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Code_Blocks__c</fullName>
    <label>Estimated Code Blocks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>