force-app/main/default/objects/Lead/fields/First_Conversation__c.field-meta.xml
<CustomField>
    <fullName>First_Conversation__c</fullName>
    <inlineHelpText>Field mapped to First Conversation in Hubspot.</inlineHelpText>
    <label>First Conversation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>