force-app/main/default/objects/Lead/fields/First_Conversation_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Conversation_Date__c</fullName>
    <inlineHelpText>Field mapped to First Conversation Date in Hubspot</inlineHelpText>
    <label>First Conversation Date</label>
    <type>DateTime</type>
</CustomField>