force-app/main/default/objects/Lead/fields/First_Email_Attempt__c.field-meta.xml
<CustomField>
    <fullName>First_Email_Attempt__c</fullName>
    <inlineHelpText>Date/Time first Outreach.io activity made for Task Type &quot;Email&quot;.</inlineHelpText>
    <label>First Email Attempt</label>
    <type>DateTime</type>
</CustomField>