force-app/main/default/objects/Lead/fields/Has_Cloud_Member__c.field-meta.xml
<CustomField>
    <fullName>Has_Cloud_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Cloud Member</label>
    <type>Checkbox</type>
</CustomField>