force-app/main/default/objects/Lead/fields/Has_CodeScan_ID__c.field-meta.xml
<CustomField>
    <fullName>Has_CodeScan_ID__c</fullName>
    <description>Checks if object has either cloud id or onprem id</description>
    <formula>!ISBLANK(OnPrem_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has CodeScan ID</label>
    <type>Checkbox</type>
</CustomField>