force-app/main/default/objects/Lead/fields/Implementation_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Questionnaire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Implementation Questionnaire</label>
    <type>Checkbox</type>
</CustomField>