force-app/main/default/objects/Lead/fields/Infrastructure__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure__c</fullName>
    <description>Infrastructure preference</description>
    <label>Infrastructure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shared</fullName>
            </value>
            <value>
                <fullName>Exclusive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>