force-app/main/default/objects/Lead/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <label>Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Integration</valueSetName>
    </valueSet>
</CustomField>