force-app/main/default/objects/Lead/fields/Is_SPAM__c.field-meta.xml
<CustomField>
    <fullName>Is_SPAM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is SPAM</label>
    <type>Checkbox</type>
</CustomField>