force-app/main/default/objects/Lead/fields/Last_Email_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_Attempt__c</fullName>
    <inlineHelpText>Date/Time last Outreach.io activity made for Task Type &quot;Email&quot;.</inlineHelpText>
    <label>Last Email Attempt</label>
    <type>DateTime</type>
</CustomField>