force-app/main/default/objects/Lead/fields/Last_Form_Fill_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Form_Fill_Date__c</fullName>
    <description>Date when this prospect last filled out a form from our website or LinkedIn or an ad.</description>
    <inlineHelpText>Date when this prospect last filled out a form from</inlineHelpText>
    <label>Last Form Fill Date</label>
    <type>Date</type>
</CustomField>