force-app/main/default/objects/Lead/fields/Lead_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Type__c</fullName>
    <label>Lead Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accenture</fullName>
            </value>
            <value>
                <fullName>App Exchange</fullName>
            </value>
            <value>
                <fullName>AutoRABIT</fullName>
            </value>
            <value>
                <fullName>Bing Ads</fullName>
            </value>
            <value>
                <fullName>Bing Search</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Calendly</fullName>
            </value>
            <value>
                <fullName>Call Campaign</fullName>
            </value>
            <value>
                <fullName>Capterra</fullName>
            </value>
            <value>
                <fullName>Case Studies</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Contact Us Form</fullName>
            </value>
            <value>
                <fullName>Contextual Targeting (ABM)</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Customize Targeting (ABM)</fullName>
            </value>
            <value>
                <fullName>Data.com</fullName>
            </value>
            <value>
                <fullName>Deloitte</fullName>
            </value>
            <value>
                <fullName>Demo Request</fullName>
            </value>
            <value>
                <fullName>Digital Marketing Reference</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Discord</fullName>
            </value>
            <value>
                <fullName>Discovery.org</fullName>
            </value>
            <value>
                <fullName>Display Ad (ABM)</fullName>
            </value>
            <value>
                <fullName>Display Retarget (ABM)</fullName>
            </value>
            <value>
                <fullName>Dreamforce</fullName>
            </value>
            <value>
                <fullName>Dreaming</fullName>
            </value>
            <value>
                <fullName>Ebook</fullName>
            </value>
            <value>
                <fullName>Email Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>