force-app/main/default/objects/Lead/fields/Lead_Status_to_map_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_to_map_to_Contact__c</fullName>
    <formula>TEXT(Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Status to map to Contact</label>
    <type>Text</type>
</CustomField>