force-app/main/default/objects/Lead/fields/Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Lost_Date__c</fullName>
    <description>Date when the Lead Stage is set to &quot;Lost&quot; for Lost Reasons other than &apos;Bad Email&apos;, &apos;Bad Phone&apos;, &apos;Bad Email &amp; Bad Phone&apos;, and &apos;Changed Organization&apos;. Created this field for reporting purposes.</description>
    <inlineHelpText>Date when the Lead Stage is set to &quot;Lost&quot; for Lost Reasons other than &apos;Bad Email&apos;, &apos;Bad Phone&apos;, &apos;Bad Email &amp; Bad Phone&apos;, and &apos;Changed Organization&apos;. Created this field for reporting purposes.</inlineHelpText>
    <label>Lost Date</label>
    <type>Date</type>
</CustomField>