force-app/main/default/objects/Lead/fields/Lost_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lost_Lead_Status__c</fullName>
    <description>Lead Status when the Lead Stage is set to &quot;Lost&quot; for Lost Reasons other than &apos;Bad Email&apos;, &apos;Bad Phone&apos;, &apos;Bad Email &amp; Bad Phone&apos;, and &apos;Changed Organization&apos;. Created this field for reporting purposes.</description>
    <inlineHelpText>Lead Status when the Lead Stage is set to &quot;Lost&quot; for Lost Reasons other than &apos;Bad Email&apos;, &apos;Bad Phone&apos;, &apos;Bad Email &amp; Bad Phone&apos;, and &apos;Changed Organization&apos;. Created this field for reporting purposes.</inlineHelpText>
    <label>Lost Lead Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>